src/objects/DataImportBatch__c.object
<CustomObject>
    <fields>
        <fullName>Account_Custom_Unique_ID__c</fullName>
        <description>An optional Unique Id field to use for Organization Account matching</description>
        <inlineHelpText>An optional Unique Id field to use for Organization Account matching</inlineHelpText>
        <label>Account Custom Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Description__c</fullName>
        <inlineHelpText>An optional description about this batch.</inlineHelpText>
        <label>Batch Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Batch_Process_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <description>The number of NPSP Data Import records to process at a time in each batch.</description>
        <inlineHelpText>The number of NPSP Data Import records to process at a time in each batch.</inlineHelpText>
        <label>Batch Process Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Custom_Unique_ID__c</fullName>
        <description>An optional Unique Id field to use for Contact matching</description>
        <inlineHelpText>An optional Unique Id field to use for Contact matching</inlineHelpText>
        <label>Contact Custom Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Matching_Rule__c</fullName>
        <defaultValue>&quot;Firstname,Lastname,Email&quot;</defaultValue>
        <description>Specifies which rule to follow when trying to match Contacts in Data Import records against existing Contacts.</description>
        <inlineHelpText>Specifies which rule to follow when trying to match Contacts in Data Import records against existing Contacts.</inlineHelpText>
        <label>Contact Matching Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Date_Range__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Enter the number of days from the Donation Date to consider when looking for a matching Opportunity or Payment. The Data Importer will choose the matching Opp or Payment whose date falls within the number of days AND is closest to the Donation Date.</description>
        <inlineHelpText>Enter the number of days from the Donation Date to consider when looking for a matching Opportunity or Payment. The Data Importer will choose the matching Opp or Payment whose date falls within the number of days AND is closest to the Donation Date.</inlineHelpText>
        <label>Number of Days from Donation Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Donation_Matching_Behavior__c</fullName>
        <defaultValue>&quot;Single Match or Create&quot;</defaultValue>
        <description>Defines how the Data Importer should handle matching Donations. You must choose a value.</description>
        <inlineHelpText>Defines how the Data Importer should handle matching Donations. You must choose a value.</inlineHelpText>
        <label>Donation Matching Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Match</fullName>
                </value>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Single Match</fullName>
                </value>
                <value>
                    <fullName>Single Match or Create</fullName>
                    <default>true</default>
                    <label>Single Match or Create</label>
                </value>
                <value>
                    <fullName>Best Match</fullName>
                </value>
                <value>
                    <fullName>Best Match or Create</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donation_Matching_Implementing_Class__c</fullName>
        <description>The developer name of an Apex class that implements the BDI_IMatching interface for Donations. Leave blank to let NPSP handle matching.</description>
        <inlineHelpText>The developer name of an Apex class that implements the BDI_IMatching interface for Donations. Leave blank to let NPSP handle matching.</inlineHelpText>
        <label>Donation Matching Implementing Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Matching_Rule__c</fullName>
        <defaultValue>&quot;Donation_Amount__c;Donation_Date__c"</defaultValue>
        <description>Specifies which fields to match by when trying to match Donations in Data Import records against existing Opportunities and Payments. Control or Command click to select more than one field.</description>
        <inlineHelpText>Specifies which fields to match by when trying to match Donations in Data Import records against existing Opportunities and Payments. Control or Command click to select more than one field.</inlineHelpText>
        <label>Donation Matching Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Count_of_Gifts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of gifts that are expected to be entered in this Batch.</description>
        <inlineHelpText>The number of gifts that are expected to be entered in this Batch.</inlineHelpText>
        <label>Expected Count of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Total_Batch_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The expected total amount of all gifts entered in this Batch.</description>
        <inlineHelpText>The expected total amount of all gifts entered in this Batch.</inlineHelpText>
        <label>Expected Total Batch Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Processed_On__c</fullName>
        <description>The date and time when the batch was last processed.</description>
        <inlineHelpText>The date and time when the batch was last processed.</inlineHelpText>
        <label>Last Processed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Post_Process_Implementing_Class__c</fullName>
        <description>The developer name of an Apex class that implements the BDI_IPostProcess interface for NPSP Data Import records.</description>
        <inlineHelpText>The developer name of an Apex class that implements the BDI_IPostProcess interface for NPSP Data Import records.</inlineHelpText>
        <label>Post Process Implementing Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Using_Scheduled_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the NPSP Data Import Batch will be automatically processed based on the schedule for the associated job.</description>
        <inlineHelpText>When checked, the NPSP Data Import Batch will be automatically processed based on the schedule for the associated job.</inlineHelpText>
        <label>Process Using Scheduled Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Records_Failed__c</fullName>
        <description>Shows the number of records that failed to be successfully processed on the date listed in the Last Processed On field.</description>
        <inlineHelpText>Shows the number of records that failed to be successfully processed on the date listed in the Last Processed On field.</inlineHelpText>
        <label>Records Failed</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Records_Successfully_Processed__c</fullName>
        <description>Shows the number of records that were successfully processed on the date listed in the Last Processed On field.</description>
        <inlineHelpText>Shows the number of records that were successfully processed on the date listed in the Last Processed On field.</inlineHelpText>
        <label>Records Successfully Processed</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_Opportunity_Rollups_while_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, NPSP calculates donor statistics when donations are processed. If unchecked, donor statistics are calculated during the default nightly Scheduled Job. Note that selecting this checkbox may slow down processing of this batch.</description>
        <inlineHelpText>When checked, NPSP calculates donor statistics when donations are processed. If unchecked, donor statistics are calculated during the default nightly Scheduled Job. Note that selecting this checkbox may slow down processing of this batch.</inlineHelpText>
        <label>Calculate Donation Rollups with Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;Approved&apos;</defaultValue>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NPSP Data Import Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Batch_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPSP Data Import Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>